fix: legacy layout bugs

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,6 @@ h1 {
 }
 
 .main {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,7 +25,6 @@ h1 {
 }
 
 .card {
-    position: relative;
     display: flex;
     flex-direction: column;
     width: 75%;
